# ntc-rosetta-conf

./: .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
docs/: Makefile  cli.rst  conf.py  index.rst  intro.rst  requirements.txt
docs/architecture/: index.rst
docs/architecture/files/: docker-compose.yaml
docs/tutorials/: 1_jetconf_basics.ipynb  2_candidate_config.ipynb  3_errors.ipynb  4_translate.ipynb  5_parse.ipynb  6_tls.rst  index.rst
docs/tutorials/1_jetconf_basics/: add_hold_time.json  add_interface_eth0.json  add_mtu.json  change_config.json  change_description.json  replace_interfaces.json
docs/tutorials/2_candidate_config/: add_interface_eth1.json
docs/tutorials/3_errors/: add_interface_eth0.json  add_interface_eth0_bad_description.json  add_interface_eth0_large_mtu.json
docs/tutorials/4_translate/: add_interface_eth0.json  add_interface_eth1.json  change_interface_eth0.json  configuration.json  merge.json  translate_candidate.json  translate_running.json
docs/tutorials/5_parse/: parse.json
docs/tutorials/6_tls/: README.md
docs/yang/: ietf-yang-library.rst  index.rst  ntc-rosetta-conf.rst
ntc_rosetta_conf/: __init__.py  cmd.py  server.py  usr_conf_data_handlers.py  usr_datastore.py  usr_op_handlers.py  usr_state_data_handlers.py
ntc_rosetta_conf/yang/: ntc-rosetta-conf.yang
tests/certs/: ca.key  ca.pem  ca.srl  server_example.crt  server_example.key  test_user.key  test_user.pem  test_user.pfx  test_user_curl.pem
(+27 files in other folders)
