[tool.poetry]
name = "ntc-rosetta-conf"
version = "0.1.0"
description = "Restconf interface for rosetta"
authors = ["David Barroso <dbarrosop@dravetech.com>"]

[tool.poetry.scripts]
ntc-rosetta-conf = 'ntc_rosetta_conf.cmd:cli'

[tool.poetry.dependencies]
python = "^3.6"
jetconf = {git = "https://github.com/networktocode/jetconf.git", branch = "ntc"}
ntc-rosetta = "^0.2.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = { version = "19.3b0", allows-prereleases = true }
pylama = "^7.7"
flake8-import-order = "^0.18.1"
mypy = "^0.701.0"
pytest-pythonpath = "^0.7.3"
pytest-cov = "^2.7"
jupyter = "^1.0"
nbval = "^0.9.1"
bash_kernel = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
